--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,15 +52,16 @@ h1 {
     color: white;
     opacity: 0.6;
     border-radius: 4px;
-    transition-duration: 0.5s;
+    transition-duration: 0.3s;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .topnav a:active {
     text-decoration: line-through;
-    text-decoration-color: yellow;
+    text-decoration-color: black;
     text-decoration-style: wavy;
-    color: black;
+    opacity: 1;
+    transition-duration: 0;
     box-shadow:none;
 }
 
@@ -72,7 +73,7 @@ h1 {
     margin-top: 40px;
     padding: 10px 20px 10px 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     color:#777777;
 }
 
@@ -84,20 +85,20 @@ h2 {
 }
 
 #profile-pic {
-    width: 25%;
+    width: 20%;
     float: left;
     margin-right: 20px;
 }
 
 .fun {
 
-    margin-left: 15%;
+    margin-left: 13%;
 }
 
 footer {
     background-color: #666666;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     width: 100%;
     height: 45px;
@@ -112,4 +113,76 @@ footer {
     bottom: 0px;
     left: 48%;
     padding: 5px;
+}
+
+#name {
+    width: 100%;
+    padding: 5px;
+    height: 30px;
+    border: 1px solid #ccc;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+#name:focus {
+    outline-color: #4aaaa5;
+    transition-duration: 0.10s;
+}
+
+#email {
+    width: 100%;
+    padding: 5px;
+    height: 30px;
+    border: 1px solid #ccc;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+#email:focus {
+    outline-color: #4aaaa5;
+    transition-duration: 0.10s;
+}
+
+#message {
+    width: 100%;
+    height: 130px;
+    padding: 5px 0px 0px 5px;
+    border: 1px solid #ccc;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    resize: none;
+    box-sizing: border-box;
+}
+
+#message:focus {
+    outline-color: #4aaaa5;
+    transition-duration: 0.10s;
+}
+
+#submit {
+    width:9%;
+    height: 33px;
+    background-color: #4aaaa5;
+    color: white;
+    font-weight: bold;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+#submit:hover {
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+#submit:active {
+    background-color: #4aaaa5;
+    opacity: 1;
+}
+
+#submit:focus {
+    outline-color: black;
+    box-shadow: 10px black;
+    opacity: 0.6;
 }
