--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/*same*/
+
+
 body {
     min-height: 100%;
     margin: 0;
@@ -67,15 +70,18 @@ h1 {
 
 .info {
     background-color: #ffffff;
-    max-width: 960px;;
+    max-width: 960px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
+    margin-bottom: 100px;
     padding: 10px 20px 10px 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
     color:#777777;
+    overflow: scroll;
 }
+
 
 h2 {
     color: #4aaaa5;
@@ -83,7 +89,7 @@ h2 {
     border-bottom: solid #dddddd;
     padding-bottom: 20px;
 }
-
+/*about me*/
 #profile-pic {
     width: 20%;
     float: left;
@@ -94,18 +100,19 @@ h2 {
 
     margin-left: 13%;
 }
-
+/*same*/
 footer {
     background-color: #666666;
     text-align: center;
     position: fixed;
+    margin-top: 50px;
     bottom: 0px;
     width: 100%;
     height: 45px;
     font-size: 8px;
     color: #dddddd;
-    weight: lighter;
-    border-top: solid 6px #4aaaa5;
+    font-weight: lighter;
+    border-top: solid 8px #4aaaa5;
 }
 
 #copyright {
@@ -114,7 +121,7 @@ footer {
     left: 48%;
     padding: 5px;
 }
-
+/*contact*/
 #name {
     width: 100%;
     padding: 5px;
@@ -185,4 +192,32 @@ footer {
     outline-color: black;
     box-shadow: 10px black;
     opacity: 0.6;
+}
+
+/*portfolio*/
+a {
+    text-decoration: none;
+    float: left;
+}
+
+
+.portfolio-pics {
+    float: left;
+    width: 300px;
+    height: 250px;
+    padding: 20px;
+    margin: 0px;
+    text-decoration: none;
+}
+
+.image-text {
+    clear: both;
+    position: relative;
+    left: 20px;
+    bottom: 100px;
+    color: white;
+    background-color: #4aaaa5;
+    padding: 10px;
+    width: 280px;
+    text-align: center;
 }
